<?xml version="1.0"?>
<package format="2">
  <name>dbow2</name>
  <version>0.0.0</version>
  <description>
    DBoW2 fork
  </description>

  <author>Titus Cieslewski</author>
  <maintainer email="titus@ifi.uzh.ch">Titus Cieslewski</maintainer>
  <license>See LICENSE.txt</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>dlib</depend>
  <depend>glog</depend>
  <depend>cv_bridge</depend>
  <depend>protobuf_catkin</depend>
</package>
